syntax = "proto3";

package proto.music_service.album.v1;

option go_package = "github.com/VrMolodyakov/vgm/music/app/gen/go/proto/music_service/album/v1;pb_music_album";

import "proto/music_service/album/v1/album.proto";
import "proto/music_service/credit/v1/credit.proto";
import "proto/music_service/track/v1/track.proto";
import "proto/music_service/info/v1/info.proto";
import "proto/filter/v1/filter.proto";


service AlbumService {
    rpc CreateAlbum(CreateAlbumRequest) returns (CreateAlbumResponse) {}
    rpc FindAlbum(FindAlbumRequest) returns (FindAlbumResponse) {}
    rpc FindFullAlbum(FindFullAlbumRequest) returns (FindFullAlbumResponse) {}
    rpc FindAllAlbums(FindAllAlbumsRequest) returns (FindAllAlbumsResponse) {}
}
  

message CreateAlbumRequest {
    string title = 1;
}

message CreateAlbumResponse{
    Album album = 1;
}


message FindAlbumRequest {
    string title = 1;
}

message FullAlbum{
    Album album = 1;
    proto.music_service.info.v1.Info info = 4;
    repeated proto.music_service.credit.v1.Credit credits = 2;
    repeated proto.music_service.track.v1.Track tracklist = 3;
}

message FindAlbumResponse{
    Album album = 1;
}

message FindFullAlbumRequest{
    string title = 1;
}

message FindFullAlbumResponse{
    FullAlbum album = 1;
}

message FindAllAlbumsRequest{
    filter.v1.Pagination pagination = 1;
    filter.v1.StringFieldFilter name = 2;
    filter.v1.StringFieldFilter person = 3;
    filter.v1.IntFieldFilter published_at = 4;
    filter.v1.Sort sort = 5;
}
message FindAllAlbumsResponse{
    repeated Album albums = 1;
} 

